# webservicerust

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  Cargo.toml  KNOWLEDGE_GRAPH.md  LICENSE  Makefile  Makefile.toml  README.md  SKILL.md  START_HERE.md  diff_output.txt  docker-compose.test.yml  docker-compose.yml  full_diff.txt  full_diff_utf8.txt  plan.md  rust-toolchain.toml  tmp_diff.txt
.github/actions/newsfeed-setup/: action.yml
.github/workflows/: newsfeed-ci.yml  newsfeed-release.yml
docs/: architecture.md  cargo-make.md  distribution.md  makefile.md  scaffolding.md  troubleshooting.md
docs/adr/: 0001-rust-monorepo-migration.md  0002-github-actions-release-pipeline.md  0003-testcontainers-for-integration-tests.md  0004-security-and-batch-limits.md
newsfeed/crates/newsfeed-config/: Cargo.toml  README.md
newsfeed/crates/newsfeed-config/src/: app_config.rs  db_config.rs  lib.rs
newsfeed/crates/newsfeed-constants/: Cargo.toml  README.md
newsfeed/crates/newsfeed-constants/src/: db.rs  http.rs  lib.rs  paths.rs
newsfeed/crates/newsfeed-db/: Cargo.toml  README.md  test_columns.rs
newsfeed/crates/newsfeed-db/migrations/mariadb/: 20260718000000_init_mariadb.sql
newsfeed/crates/newsfeed-db/migrations/mssql/: 20260718000000_init_mssql.sql
newsfeed/crates/newsfeed-db/migrations/postgres/: 20260718000000_init_postgres.sql
newsfeed/crates/newsfeed-db/src/: error.rs  lib.rs  mariadb.rs  mssql.rs  pool.rs  postgres.rs
newsfeed/crates/newsfeed-db/tests/: integration_test.rs
newsfeed/crates/newsfeed-db/tests/sql/: init_mariadb.sql  init_mssql.sql  init_postgres.sql
newsfeed/crates/newsfeed-models/: Cargo.toml  README.md
newsfeed/crates/newsfeed-models/src/: feed.rs  lib.rs  response.rs
newsfeed/crates/newsfeed-server/: Cargo.toml  README.md
newsfeed/crates/newsfeed-server/src/: extractors.rs  lib.rs  main.rs  openapi.rs  router.rs
newsfeed/crates/newsfeed-server/src/handlers/: delete.rs  get.rs  health.rs  mod.rs  not_found.rs  post.rs  put.rs  query.rs
newsfeed/crates/newsfeed-server/src/middleware/: api_key.rs  mod.rs
newsfeed/crates/newsfeed-server/tests/: integration_test.rs
newsfeed/crates/newsfeed-service/: Cargo.toml  README.md
newsfeed/crates/newsfeed-service/src/: error.rs  feed_service.rs  lib.rs  payload_validator.rs
newsfeed/docker/: Dockerfile
scripts/: generate-api-key.ps1  generate-api-key.sh  revoke-api-key.ps1  revoke-api-key.sh
