[workspace]
resolver = "2"
members = [
    "newsfeed/crates/newsfeed-constants",
    "newsfeed/crates/newsfeed-config",
    "newsfeed/crates/newsfeed-models",
    "newsfeed/crates/newsfeed-db",
    "newsfeed/crates/newsfeed-service",
    "newsfeed/crates/newsfeed-server",
]

[workspace.package]
version = "2.0.0"
edition = "2021"
authors  = ["Cuates"]
license  = "MIT"

# ── Workspace-level lint configuration ────────────────────────────────────────
[workspace.lints.rust]
# Declare `coverage_nightly` as a known cfg key used in #![cfg_attr(coverage_nightly, coverage(off))]
# for excluding entrypoint binaries from llvm-cov instrumentation.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(coverage_nightly)'] }

[workspace.lints.clippy]
unwrap_used  = "warn"
expect_used  = "warn"
pedantic     = { level = "warn", priority = -1 }
# Allow the common pedantic false-positives that are valid in this codebase.
module_name_repetitions = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"

[workspace.dependencies]
# Web framework
axum           = { version = "0.8",  features = ["macros"] }
tokio          = { version = "1",    features = ["rt-multi-thread", "net", "signal", "macros"] }
tower          = { version = "0.5" }
tower-http     = { version = "0.6",  features = ["cors", "trace", "request-id", "limit"] }
tower_governor = { version = "0.8" }

# Database
sqlx       = { version = "0.8", features = [
    "runtime-tokio",
    "postgres",
    "mysql",
    "tls-rustls",
    "macros",
] }
tiberius   = { version = "0.12", default-features = false, features = ["tokio", "native-tls"] }
tokio-util = { version = "0.7",  features = ["compat"] }
bb8        = { version = "0.9" }
bb8-tiberius = { version = "0.16" }

# Serialization
serde      = { version = "1", features = ["derive"] }
serde_json = { version = "1" }

# Observability
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Config / env
dotenvy = { version = "0.15" }
envy    = { version = "0.4" }

# Error handling
thiserror = { version = "2" }
anyhow    = { version = "1" }
futures = { version = "0.3" }

# ── Release profile optimisations ─────────────────────────────────────────────
[profile.release]
opt-level     = 3
lto           = "thin"
codegen-units = 1
strip         = "symbols"
panic         = "abort"
