[package]
name    = "newsfeed-db"
version.workspace = true
edition.workspace = true

[dependencies]
newsfeed-constants = { path = "../newsfeed-constants" }
newsfeed-config    = { path = "../newsfeed-config" }
newsfeed-models    = { path = "../newsfeed-models" }

sqlx         = { workspace = true }
tiberius     = { workspace = true }
tokio-util   = { workspace = true }
tokio        = { workspace = true }
bb8          = { workspace = true }
bb8-tiberius = { workspace = true }
serde_json   = { workspace = true }
thiserror    = { workspace = true }
tracing      = { workspace = true }
anyhow       = { workspace = true }

[dev-dependencies]
testcontainers = "0.15"
tokio          = { workspace = true }
tracing-subscriber.workspace = true

